# HPC01

./: README.md  y_test_hat.cpp
CarpetaCpp/: CMakeLists.txt  main.cpp
CarpetaCpp/Elementos/: costo.txt  theta.txt  y_train_hat.cpp
CarpetaCpp/Extraer/: extraer.cpp  extraer.h
CarpetaCpp/RegresionLineal/: regresionlineal.cpp  regresionlineal.h
CarpetaPython/: Parcial3HPC.ipynb  parcial3hpc.py
